--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.11.3</version>
         </dependency>
+        <!-- https://github.com/oshi/oshi -->
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>3.13.2</version>
+        </dependency>
     </dependencies>
-
 </project>
